Migrated things to JDK 21