@@ -8,7 +8,7 @@ import com.itemis.fluffyj.memory.api.FluffyVectorSegment;
 import com.itemis.fluffyj.memory.error.FluffyMemoryException;
 import com.itemis.fluffyj.memory.internal.PointerOfBlob;
 
-import java.lang.foreign.SegmentScope;
+import java.lang.foreign.Arena;
 
 /**
  * Helps with allocating pointers to off heap memory areas that hold arrays.
@@ -25,7 +25,7 @@ public final class FluffyMemoryVectorPointerAllocator<T> {
      *
      * @param toHere - The constructed pointer will point to the address of this segment.
      */
-    public FluffyMemoryVectorPointerAllocator(FluffyVectorSegment<? extends T> toHere) {
+    public FluffyMemoryVectorPointerAllocator(final FluffyVectorSegment<? extends T> toHere) {
         requireNonNull(toHere, "toHere");
         initialValue = toHere.rawAddress();
         byteSize = toHere.byteSize();
@@ -38,41 +38,41 @@ public final class FluffyMemoryVectorPointerAllocator<T> {
      * @param byteSize - The size of the array the pointer shall point to in bytes.
      * @param arrayType - Type of the array the provided address points to.
      */
-    public FluffyMemoryVectorPointerAllocator(long address, long byteSize, Class<? extends T[]> arrayType) {
+    public FluffyMemoryVectorPointerAllocator(final long address, final long byteSize,
+            final Class<? extends T[]> arrayType) {
         this.initialValue = requireNonNull(address, "address");
         this.byteSize = byteSize;
         this.type = requireNonNull(arrayType, "typeOfData");
     }
 
     /**
-     * Allocate the pointer. Its scope will be the global scope.
+     * Allocate the pointer. Its arena will be the auto arena.
      *
      * @return A new {@link FluffyPointer} instance.
      */
     public FluffyVectorPointer<T> allocate() {
-        return allocate(SegmentScope.global());
+        return allocate(Arena.ofAuto());
     }
 
     /**
-     * Allocate the pointer and attach it to the provided {@code scope}.
+     * Allocate the pointer and attach it to the provided {@code arena}.
      *
-     * @param scope - {@link SegmentScope} of the pointer.
+     * @param arena - {@link Arena} of the pointer.
      * @return A new {@link FluffyPointer} instance.
      */
     // The cast is indeed unsafe but it won't produce any ClassCastExceptions since the value the
     // pointer points to will be interpreted as T anyway which may be false but does not cause any
     // error at the time the cast is done.
     @SuppressWarnings({"unchecked"})
-    public FluffyVectorPointer<T> allocate(SegmentScope scope) {
-        requireNonNull(scope, "scope");
+    public FluffyVectorPointer<T> allocate(final Arena arena) {
+        requireNonNull(arena, "arena");
 
         Object result = null;
-        if (type.isAssignableFrom(Byte[].class)) {
-            result = new PointerOfBlob(initialValue, byteSize, scope);
-        } else {
+        if (!type.isAssignableFrom(Byte[].class)) {
             throw new FluffyMemoryException(
                 "Cannot allocate vector pointer of unknown type: " + type.getCanonicalName());
         }
+        result = new PointerOfBlob(initialValue, byteSize, arena);
 
         return (FluffyVectorPointer<T>) result;
     }
