@@ -6,8 +6,8 @@ import static java.util.Objects.requireNonNull;
 import com.itemis.fluffyj.memory.api.FluffyPointer;
 import com.itemis.fluffyj.memory.internal.impl.FluffyScalarPointerImpl;
 
+import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.SegmentScope;
 import java.lang.foreign.ValueLayout;
 
 /**
@@ -19,11 +19,11 @@ public class PointerOfLong extends FluffyScalarPointerImpl<Long> {
      * Allocate a new pointer.
      *
      * @param addressPointedTo - The {@link MemorySegment} the new pointer will point to.
-     * @param scope - Attach the new pointer to this scope.
+     * @param arena - Attach the new pointer to this arena.
      */
-    public PointerOfLong(long addressPointedTo, SegmentScope scope) {
+    public PointerOfLong(final long addressPointedTo, final Arena arena) {
         super(requireNonNull(addressPointedTo, "addressPointedTo"), JAVA_LONG.byteSize(),
-            requireNonNull(scope, "scope"));
+            requireNonNull(arena, "arena"));
     }
 
     @Override
@@ -33,6 +33,6 @@ public class PointerOfLong extends FluffyScalarPointerImpl<Long> {
 
     @Override
     public MemorySegment rawDereference() {
-        return MemorySegment.ofAddress(getRawValue(), JAVA_LONG.byteSize(), scope);
+        return MemorySegment.ofAddress(getRawValue()).reinterpret(JAVA_LONG.byteSize(), arena, null);
     }
 }
