@@ -4,7 +4,7 @@ import static com.itemis.fluffyj.memory.FluffyMemory.pointer;
 import static com.itemis.fluffyj.tests.FluffyTestHelper.assertFinal;
 import static com.itemis.fluffyj.tests.FluffyTestHelper.assertIsStaticHelper;
 import static com.itemis.fluffyj.tests.FluffyTestHelper.assertNullArgNotAccepted;
-import static java.lang.foreign.SegmentScope.global;
+import static java.lang.foreign.Arena.global;
 import static java.lang.foreign.ValueLayout.JAVA_BYTE;
 import static java.lang.foreign.ValueLayout.JAVA_CHAR;
 import static java.lang.foreign.ValueLayout.JAVA_INT;
@@ -23,7 +23,7 @@ import com.itemis.fluffyj.memory.internal.FluffyMemoryFuncPointerBuilderStages.C
 import com.itemis.fluffyj.memory.internal.FluffyMemoryFuncPointerBuilderStages.ReturnTypeStage;
 import com.itemis.fluffyj.memory.internal.FluffyMemoryFuncPointerBuilderStages.TypeConverterStage;
 import com.itemis.fluffyj.memory.internal.impl.CDataTypeConverter;
-import com.itemis.fluffyj.memory.tests.MemoryScopeEnabledTest;
+import com.itemis.fluffyj.memory.tests.ArenafiedTest;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -33,7 +33,7 @@ import java.lang.foreign.MemoryLayout;
 import java.lang.foreign.MemorySegment;
 import java.util.Comparator;
 
-public class FunctionPointerTest extends MemoryScopeEnabledTest {
+public class FunctionPointerTest extends ArenafiedTest {
 
     private static final String TEST_FUNC = "testFunc";
     private static final String NO_ARGS = "noArgs";
@@ -53,52 +53,52 @@ public class FunctionPointerTest extends MemoryScopeEnabledTest {
 
     @Test
     void test_correct_stage_order() {
-        var firstStage = pointer().toFunc(TEST_FUNC);
+        final var firstStage = pointer().toFunc(TEST_FUNC);
         assertThat(firstStage).isInstanceOf(FluffyMemoryFuncPointerBuilder.class);
 
-        var secondStage = firstStage.ofType(new TestType());
+        final var secondStage = firstStage.ofType(new TestType());
         assertThat(secondStage).isInstanceOf(TypeConverterStage.class);
 
-        var thirdStage = secondStage.withTypeConverter(new CDataTypeConverter());
+        final var thirdStage = secondStage.withTypeConverter(new CDataTypeConverter());
         assertThat(thirdStage).isInstanceOf(ArgsStage.class);
 
-        var otherFourthStage = thirdStage.withoutArgs();
+        final var otherFourthStage = thirdStage.withoutArgs();
         assertThat(otherFourthStage).isInstanceOf(ReturnTypeStage.class);
 
-        var fourthStage = thirdStage.withArgs(JAVA_BYTE);
+        final var fourthStage = thirdStage.withArgs(JAVA_BYTE);
         assertThat(fourthStage).isInstanceOf(ReturnTypeStage.class);
 
-        var otherFifthStage = fourthStage.andNoReturnType();
+        final var otherFifthStage = fourthStage.andNoReturnType();
         assertThat(otherFifthStage).isInstanceOf(BinderStage.class);
 
-        var fifthStage = fourthStage.andReturnType(JAVA_INT);
+        final var fifthStage = fourthStage.andReturnType(JAVA_INT);
         assertThat(fifthStage).isInstanceOf(BinderStage.class);
 
-        var sixthStage = fifthStage.bindTo(scope);
+        final var sixthStage = fifthStage.bindTo(arena);
         assertThat(sixthStage).isInstanceOf(MemorySegment.class);
 
-        var otherSixthStage = fifthStage.bindToGlobalScope();
+        final var otherSixthStage = fifthStage.bindToGlobalArena();
         assertThat(otherSixthStage).isInstanceOf(MemorySegment.class);
     }
 
     @Test
     void test_bind_to_void_method_with_no_args_use_shortcuts() {
-        var result =
-            pointer().toCFunc(NO_ARGS).of(new TestType()).withoutArgs().andNoReturnType().bindToGlobalScope();
+        final var result =
+            pointer().toCFunc(NO_ARGS).of(new TestType()).withoutArgs().andNoReturnType().bindToGlobalArena();
 
         assertThat(result).isNotNull();
     }
 
     @Test
     void test_bind_to_void_method_with_no_args_dont_use_shortcuts() {
-        var result =
+        final var result =
             pointer().toCFunc(NO_ARGS).of(new TestType()).withArgs().andNoReturnType().bindTo(global());
         assertThat(result).isNotNull();
     }
 
     @Test
     void when_manual_bind_unknown_method_then_throw_exception() {
-        var methodName = "unknownMethod";
+        final var methodName = "unknownMethod";
         assertThatThrownBy(
             () -> pointer().toCFunc(methodName).of(this).withArgs().andNoReturnType().bindTo(global()))
                 .isInstanceOf(FluffyMemoryException.class)
@@ -108,31 +108,31 @@ public class FunctionPointerTest extends MemoryScopeEnabledTest {
 
     @Test
     void when_manual_bind_private_method_then_throw_exception() {
-        var methodName = "privateMethod";
+        final var methodName = "privateMethod";
         assertThatThrownBy(
-            () -> pointer().toCFunc(methodName).of(new TestType()).withArgs().andNoReturnType().bindToGlobalScope())
+            () -> pointer().toCFunc(methodName).of(new TestType()).withArgs().andNoReturnType().bindToGlobalArena())
                 .isInstanceOf(FluffyMemoryException.class)
                 .hasMessage("Cannot create function pointer to non accessible JVM methods.");
     }
 
     @Test
     void when_manual_bind_synthetic_method_then_throw_exception() {
-        var methodName = "compare";
+        final var methodName = "compare";
         assertThatThrownBy(() -> pointer().toCFunc(methodName).of(new BridgeMethodDemo()).withoutArgs()
-            .andNoReturnType().bindTo(scope))
+            .andNoReturnType().bindTo(arena))
                 .isInstanceOf(FluffyMemoryException.class)
                 .hasMessage("Cannot create function pointer to synthetic JVM methods.");
     }
 
     @Test
     void test_auto_bind_happy_path() {
-        var result = pointer().toCFunc(TEST_FUNC).of(new TestType()).autoBind();
+        final var result = pointer().toCFunc(TEST_FUNC).of(new TestType()).autoBind();
         assertThat(result).isNotNull();
     }
 
     @Test
-    void test_auto_bind_happy_path_custom_scope() {
-        var result = pointer().toCFunc(TEST_FUNC).of(new TestType()).autoBindTo(scope);
+    void test_auto_bind_happy_path_custom_arena() {
+        final var result = pointer().toCFunc(TEST_FUNC).of(new TestType()).autoBindTo(arena);
 
         assertThat(result.scope().isAlive()).isTrue();
 
@@ -143,7 +143,7 @@ public class FunctionPointerTest extends MemoryScopeEnabledTest {
 
     @Test
     void test_auto_bind_no_args_no_return_type() {
-        var result = pointer().toCFunc(NO_ARGS).of(new TestType()).autoBind();
+        final var result = pointer().toCFunc(NO_ARGS).of(new TestType()).autoBind();
         assertThat(result).isNotNull();
     }
 
@@ -157,7 +157,7 @@ public class FunctionPointerTest extends MemoryScopeEnabledTest {
 
     @Test
     void when_auto_bind_overloaded_method_then_throw_exception() {
-        var methodName = "overloadedMethod";
+        final var methodName = "overloadedMethod";
         assertThatThrownBy(() -> pointer().toCFunc(methodName).of(new MethodOverloaded()).autoBind())
             .isInstanceOf(FluffyMemoryException.class)
             .hasMessage("Cannot autobind overloaded method '" + methodName + "'. Please perform manual bind.");
@@ -165,7 +165,7 @@ public class FunctionPointerTest extends MemoryScopeEnabledTest {
 
     @Test
     void when_auto_bind_unknown_method_then_throw_exception() {
-        var methodName = "unknownMethod";
+        final var methodName = "unknownMethod";
         assertThatThrownBy(() -> pointer().toCFunc(methodName).of(this).autoBind())
             .isInstanceOf(FluffyMemoryException.class)
             .hasMessage("Could not find method '" + methodName + "' in type " + this.getClass().getCanonicalName());
@@ -173,7 +173,7 @@ public class FunctionPointerTest extends MemoryScopeEnabledTest {
 
     @Test
     void when_auto_bind_method_with_unsupported_args_then_throw_exception() {
-        var methodName = "unsupportedArgs";
+        final var methodName = "unsupportedArgs";
         assertThatThrownBy(() -> pointer().toCFunc(methodName).of(new TestType()).autoBind())
             .isInstanceOf(FluffyMemoryException.class)
             .hasMessage("Method '" + methodName + "' of type " + TestType.class.getCanonicalName()
@@ -184,7 +184,7 @@ public class FunctionPointerTest extends MemoryScopeEnabledTest {
 
     @Test
     void when_auto_bind_method_with_unsupported_returnType_then_throw_exception() {
-        var methodName = "unsupportedReturnType";
+        final var methodName = "unsupportedReturnType";
         assertThatThrownBy(() -> pointer().toCFunc(methodName).of(new TestType()).autoBind())
             .isInstanceOf(FluffyMemoryException.class)
             .hasMessage("Method '" + methodName + "' of type " + TestType.class.getCanonicalName()
@@ -195,7 +195,7 @@ public class FunctionPointerTest extends MemoryScopeEnabledTest {
 
     @Test
     void when_auto_bind_synthetic_method_then_throw_exception() {
-        var methodName = "compare";
+        final var methodName = "compare";
         assertThatThrownBy(() -> pointer().toCFunc(methodName).of(new BridgeMethodDemo()).autoBind())
             .isInstanceOf(FluffyMemoryException.class)
             .hasMessage("Cannot create function pointer to synthetic JVM methods.");
@@ -203,7 +203,7 @@ public class FunctionPointerTest extends MemoryScopeEnabledTest {
 
     @Test
     void when_auto_bind_private_method_then_throw_exception() {
-        var methodName = "privateMethod";
+        final var methodName = "privateMethod";
         assertThatThrownBy(() -> pointer().toCFunc(methodName).of(new TestType()).autoBind())
             .isInstanceOf(FluffyMemoryException.class)
             .hasMessage("Cannot create function pointer to non accessible JVM methods.");
@@ -226,7 +226,7 @@ public class FunctionPointerTest extends MemoryScopeEnabledTest {
 
     @Test
     void withArgs_uses_typeConv() {
-        var testArg = JAVA_CHAR;
+        final var testArg = JAVA_CHAR;
         pointer().toFunc(TEST_FUNC).ofType(new TestType()).withTypeConverter(convMock).withArgs(testArg);
 
         verify(convMock).getJvmTypes(testArg);
@@ -234,15 +234,15 @@ public class FunctionPointerTest extends MemoryScopeEnabledTest {
 
     @Test
     void autoBindTo_uses_typeConv() {
-        var convSpy = spy(new CDataTypeConverter());
-        pointer().toFunc(TEST_FUNC).ofType(new TestType()).withTypeConverter(convSpy).autoBindTo(scope);
+        final var convSpy = spy(new CDataTypeConverter());
+        pointer().toFunc(TEST_FUNC).ofType(new TestType()).withTypeConverter(convSpy).autoBindTo(arena);
 
         verify(convSpy).getNativeTypes(any());
     }
 
     @Test
     void andReturnType_uses_typeConv() {
-        var testReturnType = JAVA_INT;
+        final var testReturnType = JAVA_INT;
         pointer().toFunc(TEST_FUNC).ofType(new TestType()).withTypeConverter(convMock).withoutArgs()
             .andReturnType(testReturnType);
 
@@ -291,7 +291,7 @@ public class FunctionPointerTest extends MemoryScopeEnabledTest {
 
     @Test
     void autoBindTo_does_not_accept_null() {
-        assertNullArgNotAccepted(() -> pointer().toCFunc(TEST_FUNC).of(new TestType()).autoBindTo(null), "scope");
+        assertNullArgNotAccepted(() -> pointer().toCFunc(TEST_FUNC).of(new TestType()).autoBindTo(null), "arena");
     }
 
     @Test
@@ -303,7 +303,7 @@ public class FunctionPointerTest extends MemoryScopeEnabledTest {
     @Test
     void bindTo_does_not_accept_null() {
         assertNullArgNotAccepted(
-            () -> pointer().toCFunc(TEST_FUNC).of(TEST_FUNC).withoutArgs().andNoReturnType().bindTo(null), "scope");
+            () -> pointer().toCFunc(TEST_FUNC).of(TEST_FUNC).withoutArgs().andNoReturnType().bindTo(null), "arena");
     }
 
     // Will only be used to bind a MethodType in a test
@@ -311,7 +311,7 @@ public class FunctionPointerTest extends MemoryScopeEnabledTest {
     private static final class MethodOverloaded {
         void overloadedMethod() {}
 
-        int overloadedMethod(int arg) {
+        int overloadedMethod(final int arg) {
             return -1;
         }
     }
@@ -319,9 +319,9 @@ public class FunctionPointerTest extends MemoryScopeEnabledTest {
     // Will only be used to bind a MethodType in a test
     @SuppressWarnings("unused")
     private static final class TestType {
-        private String field = "a synthetic getter will be created for this field as soon as it is accessed";
+        private final String field = "a synthetic getter will be created for this field as soon as it is accessed";
 
-        int testFunc(byte arg) {
+        int testFunc(final byte arg) {
             return 0;
         }
 
@@ -331,7 +331,7 @@ public class FunctionPointerTest extends MemoryScopeEnabledTest {
 
         void noArgs() {}
 
-        void unsupportedArgs(String unsupportedArg) {}
+        void unsupportedArgs(final String unsupportedArg) {}
 
         String unsupportedReturnType() {
             return null;
@@ -342,7 +342,7 @@ public class FunctionPointerTest extends MemoryScopeEnabledTest {
 
     public class BridgeMethodDemo implements Comparator<Integer> {
         @Override
-        public int compare(Integer o1, Integer o2) {
+        public int compare(final Integer o1, final Integer o2) {
             return 0;
         }
     }
